# Data-Engineering-REvision

./: README.md  pyproject.toml
data_engineering_revision/: __init__.py  docker-compose.yml  notebook.ipynb
data_engineering_revision/archive/: cleanup.py  ingestion_to_bronze.py
data_engineering_revision/documentation_generation/: documentation.py  notebook.ipynb
data_engineering_revision/spider_data_etl/: dbt_project.yml
data_engineering_revision/spider_data_etl/macros/: mirror_all_to_bronze.sql
data_engineering_revision/spider_data_etl/models/meta/: fk_constraints.sql  unique_constraints.sql
data_engineering_revision/spiderman/: Dockerfile  check_and_load.py  entrypoint.sh
